fix: ladd button for like

--- a/index.html
+++ b/index.html
@@ -35,42 +35,42 @@
         <img src="./images/dombay.jpg" alt="гора Домбай" class="cards__photo">
         <div class="cards__description-container">
           <h3 class="cards__title">Домбай</h3>
-          <div type="button" class="cards__like"></div>
+          <button type="button" class="cards__like"></button>
         </div>
       </div>
       <div class="cards__item">
         <img src="./images/moscow.jpg" alt="гора Домбай" class="cards__photo">
         <div class="cards__description-container">
           <h3 class="cards__title">Москва</h3>
-          <div class="cards__like"></div>
+          <button type="button" class="cards__like"></button>
         </div>
       </div>
       <div class="cards__item">
         <img src="./images/nizniynov.jpg" alt="гора Домбай" class="cards__photo">
         <div class="cards__description-container">
           <h3 class="cards__title">Нижний-Новгород</h3>
-          <div class="cards__like"></div>
+          <button type="button" class="cards__like"></button>
         </div>
       </div>
       <div class="cards__item">
         <img src="./images/arhangelsk.jpg" alt="гора Домбай" class="cards__photo">
         <div class="cards__description-container">
           <h3 class="cards__title">Архангельск</h3>
-          <div class="cards__like"></div>
+          <button type="button" class="cards__like"></button>
         </div>
       </div>
       <div class="cards__item">
         <img src="./images/krymia.jpg" alt="гора Домбай" class="cards__photo">
         <div class="cards__description-container">
           <h3 class="cards__title">Крым</h3>
-          <div class="cards__like"></div>
+          <button type="button" class="cards__like"></button>
         </div>
       </div>
       <div class="cards__item">
         <img src="./images/sochi.jpg" alt="гора Домбай" class="cards__photo">
         <div class="cards__description-container">
           <h3 class="cards__title">Сочи</h3>
-          <div class="cards__like"></div>
+          <button type="button" class="cards__like"></button>
         </div>
       </div>
     </section>
