--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
     </section>
     </main>
-    <footer class="footer content__section">
+    <footer class="footer">
       <address class="footer__copyright"> &copy; 2021 Mesto Russia</address>
     </footer>
     <div class="popup">
