fix: css classes

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       <div class="popup__container">
         <h3 class="popup__title page__title">Редактировать профиль</h3>
         <form class="form" name="forma" method="POST" >
-          <input type="text" class="form__name" name="name" value="Жак-Ив Кусто" required>
-          <input type="text" class="form__job" name="job" value="Исследователь" required>
+          <input type="text" class="form__input form__input_type_name" name="name" value="Жак-Ив Кусто" required>
+          <input type="text" class="form__input form__input_type_job" name="job" value="Исследователь" required>
           <button type="submit" class="form__save-button">Сохранить</button>
         </form>
         <button type="button" class="popup__close-button"></button>
