--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <footer class="footer">
       <address class="footer__copyright"> &copy; 2021 Mesto Russia</address>
     </footer>
-    <div class="popup">
+    <div class="popup popup_type_profile">
       <div class="popup__container">
         <h3 class="popup__title page__title">Редактировать профиль</h3>
         <form class="form" name="forma" method="POST" >
@@ -89,7 +89,32 @@
         <button type="button" class="popup__close-button"></button>
       </div>
     </div>
+    <div class="popup popup_type_size-image">
+      <div class="popup__container">
+        <h3 class="popup__title page__title"></h3>
+        <form class="form" name="forma" method="POST" >
+          <input type="text" class="form__input form__input_type_name" name="name" value="Жак-Ив Кусто" required>
+          <input type="text" class="form__input form__input_type_job" name="job" value="Исследователь" required>
+          <button type="submit" class="form__save-button">Сохранить</button>
+        </form>
+        <button type="button" class="popup__close-button"></button>
+      </div>
+    </div>
+    <div class="popup popup_type_image">
+      <div class="popup__container">
+        <h3 class="popup__title page__title">Новое Место</h3>
+        <form class="form" name="forma" method="POST" >
+          <input type="text" class="form__input form__input_type_place" name="place" value="Москва" placeholder="название" required>
+          <input type="text" class="form__input form__input_type_link" name="link" value="ссылка" placeholder="ссылка на картинку" required>
+          <button type="submit" class="form__save-button">Сохранить</button>
+        </form>
+        <button type="button" class="popup__close-button"></button>
+      </div>
+    </div>
   </div>
+  <template>
+
+  </template>
   <script src="./scripts/script.js"></script>
 </body>
 </html>
