feat: add popup photo

--- a/index.html
+++ b/index.html
@@ -48,17 +48,13 @@
         <button type="button" class="popup__close-button"></button>
       </div>
     </div>
-    <!-- <div class="popup popup_type_size-image">
+    <div class="popup popup_type_size-image">
       <div class="popup__container">
-        <h3 class="popup__title page__title"></h3>
-        <form class="form" name="forma" method="POST" >
-          <input type="text" class="form__input form__input_type_name" name="name" value="Жак-Ив Кусто" required>
-          <input type="text" class="form__input form__input_type_job" name="job" value="Исследователь" required>
-          <button type="submit" class="form__save-button">Сохранить</button>
-        </form>
-        <button type="button" class="popup__close-button"></button>
+        <img src="" alt="" class="popup__photo ">
+        <h3 class="popup__photo-caption">фото</h3>
+        <button type="button" class="popup__close-button popup__close-button_size_image"></button>
       </div>
-    </div> -->
+    </div>
     <div class="popup popup_type_image">
       <div class="popup__container">
         <h3 class="popup__title page__title">Новое Место</h3>
