--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <div class="popup popup_type_size-image">
       <div class="popup__container">
-        <img src="" alt="" class="popup__photo ">
+        <img src="#" alt="#" class="popup__photo ">
         <h3 class="popup__photo-caption">фото</h3>
         <button type="button" class="popup__close-button popup__close-button_size_image"></button>
       </div>
