--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <div class="popup__container">
         <h3 class="popup__title page__title">Редактировать профиль</h3>
         <form class="form" name="forma" method="POST" >
-          <input type="text" class="form__input form__input_type_name" name="name" value="Жак-Ив Кусто" required>
-          <input type="text" class="form__input form__input_type_job" name="job" value="Исследователь" required>
+          <input type="text" class="form__input form__input_type_name" name="name" value="Жак-Ив Кусто" placeholder="Введите ваши данные" required>
+          <input type="text" class="form__input form__input_type_job" name="job" value="Исследователь" placeholder="вид деятельности" required>
           <button type="submit" class="form__save-button">Сохранить</button>
         </form>
         <button type="button" class="popup__close-button"></button>
@@ -60,7 +60,7 @@
         <h3 class="popup__title page__title">Новое Место</h3>
         <form class="form form_save-photo" name="form_save-photo" method="POST" >
           <input type="text" class="form__input form__input_type_place" name="place" value="" placeholder="название" required>
-          <input type="url" class="form__input form__input_type_link" name="link" value="" placeholder="ссылка на картинку" required>
+          <input type="url" class="form__input form__input_type_link" name="link" value=" " placeholder="ссылка на картинку" required>
           <button type="submit" class="form__save-button">Сохранить</button>
         </form>
         <button type="button" class="popup__close-button popup__close-button-photo"></button>
