--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     <div class="popup popup_type_profile">
       <div class="popup__container">
         <h3 class="popup__title page__title">Редактировать профиль</h3>
-        <form class="form" name="forma" method="POST" >
+        <form class="form form_type_profile" name="forma" method="POST" >
           <input type="text" class="form__input form__input_type_name" name="name" value="Жак-Ив Кусто" placeholder="Введите ваши данные" required>
           <input type="text" class="form__input form__input_type_job" name="job" value="Исследователь" placeholder="вид деятельности" required>
-          <button type="submit" class="form__save-button">Сохранить</button>
+          <button type="submit" class="form__save-button form__save-button_type_profile">Сохранить</button>
         </form>
-        <button type="button" class="popup__close-button"></button>
+        <button type="button" class="popup__close-button popup__close-button_type_profile"></button>
       </div>
     </div>
     <div class="popup popup_type_size-image">
@@ -63,7 +63,7 @@
           <input type="url" class="form__input form__input_type_link" name="link" value=" " placeholder="ссылка на картинку" required>
           <button type="submit" class="form__save-button">Сохранить</button>
         </form>
-        <button type="button" class="popup__close-button popup__close-button-photo"></button>
+        <button type="button" class="popup__close-button popup__close-button-card"></button>
       </div>
     </div>
   </div>
