--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="description" content="Проект Mesto от Яндекс Практикум">
     <meta name="author" content="Цуркан Кирилл">
     <meta name="keywords" content="практика на js, проект Mesto">
-
     <title>Mesto</title>
 </head>
 <body class="page">
@@ -60,7 +59,7 @@
         <h3 class="popup__title page__title">Новое Место</h3>
         <form class="form form_save-photo" name="form_save-photo" method="POST" >
           <input type="text" class="form__input form__input_type_place" name="place" value="" placeholder="название" required>
-          <input type="url" class="form__input form__input_type_link" name="link" value=" " placeholder="ссылка на картинку" required>
+          <input type="url" class="form__input form__input_type_link" name="link" value="" placeholder="ссылка на картинку" required>
           <button type="submit" class="form__save-button">Сохранить</button>
         </form>
         <button type="button" class="popup__close-button popup__close-button-card"></button>
@@ -77,7 +76,8 @@
       </div>
     </div>
   </template>
-  <script src="./scripts/script.js"></script>
+  <!-- <script src="./scripts/initial-cards.js"></script> -->
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
 
