--- a/index.html
+++ b/index.html
@@ -38,15 +38,19 @@
     </footer>
     <div class="popup popup_type_profile">
       <div class="popup__container">
+        <h3 class="popup__title page__title">Редактировать профиль</h3>
         <form class="form form_type_profile" name="forma" method="POST" novalidate>
-          <h3 class="popup__title page__title">Редактировать профиль</h3>
           <label class="popup__label">
-            <input type="text" class="form__input form__input_type_name" name="name" id="name" value="" placeholder="Введите ваши данные" minlength="2" maxlength="40" required>
-            <span class="form__error" id="name-error"></span>
+            <div class="form__field">
+              <input type="text" class="form__input form__input_type_name" name="name" id="name" value="" placeholder="Введите ваши данные" minlength="2" maxlength="40" required>
+              <span class="form__error" id="name-error"></span>
+            </div>
           </label>
           <label class="popup__label">
-            <input type="text" class="form__input form__input_type_job" name="job" id="job" value="" placeholder="вид деятельности" minlength="2" maxlength="200" required>
-            <span class="form__error" id="job-error"></span>
+            <div class="form__field">
+              <input type="text" class="form__input form__input_type_job" name="job" id="job" value="" placeholder="вид деятельности" minlength="2" maxlength="200" required>
+              <span class="form__error" id="job-error"></span>
+            </div>
           </label>
           <button type="submit" class="form__save-button form__save-button_type_profile">Сохранить</button>
         </form>
@@ -62,15 +66,19 @@
     </div>
     <div class="popup popup_type_image">
       <div class="popup__container">
+        <h3 class="popup__title page__title">Новое Место</h3>
         <form class="form form_save-photo" name="form_save-photo" method="POST" novalidate>
-          <h3 class="popup__title page__title">Новое Место</h3>
           <label class="popup__label">
-          <input type="text" class="form__input form__input_type_place" name="place"  id="place" value="" placeholder="название" minlength="2" maxlength="30" required>
-          <span class="form__error" id="place-error"></span>
+            <div class="form__field">
+              <input type="text" class="form__input form__input_type_place" name="place"  id="place" value="" placeholder="название" minlength="2" maxlength="30" required>
+              <span class="form__error" id="place-error"></span>
+            </div>
         </label>
         <label class="popup__label">
-          <input type="url" class="form__input form__input_type_link" name="link" id="link" value="" placeholder="ссылка на картинку" required>
-          <span class="form__error" id="link-error"></span>
+          <div class="form__field">
+            <input type="url" class="form__input form__input_type_link" name="link" id="link" value="" placeholder="ссылка на картинку" required>
+            <span class="form__error" id="link-error"></span>
+            </div>
         </label>
           <button type="submit" class="form__save-button form__save-button_type_image">Сохранить</button>
         </form>
