--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <form class="form form_type_profile" name="forma" method="POST" novalidate>
           <label class="popup__label">
             <div class="form__field">
-              <input type="text" class="form__input form__input_type_name" name="name" id="name" value="" placeholder="Введите ваши данные" minlength="2" maxlength="40" required>
+              <input type="text" class="form__input form__input_type_name" name="name" id="name" value="#" placeholder="Введите ваши данные" minlength="2" maxlength="40" required>
               <span class="form__error" id="name-error"></span>
             </div>
           </label>
           <label class="popup__label">
             <div class="form__field">
-              <input type="text" class="form__input form__input_type_job" name="job" id="job" value="" placeholder="вид деятельности" minlength="2" maxlength="200" required>
+              <input type="text" class="form__input form__input_type_job" name="job" id="job" value="#" placeholder="вид деятельности" minlength="2" maxlength="200" required>
               <span class="form__error" id="job-error"></span>
             </div>
           </label>
@@ -60,7 +60,7 @@
     <div class="popup popup_type_size-image">
       <div class="popup__container popup__container_type_size-image">
         <img src="#" alt="#" class="popup__photo ">
-        <h3 class="popup__photo-caption">фото</h3>
+        <h3 class="popup__photo-caption"></h3>
         <button type="button" class="popup__close-button popup__close-button_size_image"></button>
       </div>
     </div>
@@ -97,8 +97,12 @@
     </div>
   </template>
   <!-- <script src="./scripts/initial-cards.js"></script> -->
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/index.js"></script>
+
+  <!-- <script src="./scripts/validate.js"></script> -->
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
+  <script type="module" src="./scripts/components.js"></script>
 </body>
 </html>
 
