--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pages/index.css">
+    <!-- <link rel="stylesheet" href="./pages/index.css"> -->
     <meta name="description" content="Проект Mesto от Яндекс Практикум">
     <meta name="author" content="Цуркан Кирилл">
     <meta name="keywords" content="практика на js, проект Mesto">
@@ -13,12 +13,12 @@
 <body class="page">
   <div class="page__container">
     <header class="header section page__header">
-      <img class="header__logo" src="./images/mesto_logo.svg" alt="логотип mesto">
+      <img class="header__logo" src="<%=require('../images/mesto_logo.svg')%>" alt="логотип mesto">
     </header>
     <main class="content">
       <section class="profile section content__section page__profile">
         <div class="profile__avatar-container">
-          <img src="./images/kusto.png" alt="Жак-Ив Кусто" class="profile__avatar">
+          <img src="<%=require('../images/kusto.png')%>" alt="Жак-Ив Кусто" class="profile__avatar">
         </div>
         <div class="profile__info">
           <div class="profile__container">
@@ -96,7 +96,7 @@
       </div>
     </div>
   </template>
-  <script type="module" src="./pages/index.js"></script>
+  <!-- <script type="module" src="./pages/index.js"></script> -->
 </body>
 </html>
 
