--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 <body class="page">
   <div class="page__container">
     <header class="header section page__header">
-      <img class="header__logo" src="<%=require('../images/mesto_logo.svg')%>" alt="логотип mesto">
+      <img class="header__logo" src="<%=require('./images/mesto_logo.svg')%>" alt="логотип mesto">
     </header>
     <main class="content">
       <section class="profile section content__section page__profile">
         <div class="profile__avatar-container">
-          <img src="<%=require('../images/kusto.png')%>" alt="Жак-Ив Кусто" class="profile__avatar">
+          <img src="<%=require('./images/kusto.png')%>" alt="Жак-Ив Кусто" class="profile__avatar">
         </div>
         <div class="profile__info">
           <div class="profile__container">
