--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,10 @@
       <img src=" " alt=" " class="cards__photo">
       <div class="cards__description-container">
         <h3 class="cards__title"></h3>
-        <button type="button" class="cards__like"></button>
+        <div class="cards__conteiner-likes">
+          <button type="button" class="cards__like"></button>
+          <span class="cards__count-likes">100</span>
+        </div>
         <button type="button" class="cards__remove"></button>
       </div>
     </div>
