fix class in html

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
 <!------------Попап подтверждение запрома на удаление карточек------------->
     <div class="popup popup_type_confirm">
       <div class="popup__container">
-        <form class="form form__confirm" name="confirm" action="#" novalidate>
+        <form class="form form_type_confirm" name="confirm" action="#" novalidate>
           <h3 class="popup__title page__title">Вы уверены?</h3>
           <button type="submit" class="form__save-button form__save-button_type_submit-card ">Да</button>
         </form>
