fix bug after 1-st review 9 sprint

--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
             <span class="form__error" id="link-error"></span>
             </div>
         </label>
-          <button type="submit" class="form__save-button form__save-button_type_image">Сохранить</button>
+          <button type="submit" class="form__save-button form__save-button_type_image">Создать</button>
         </form>
         <button type="button" class="popup__close-button popup__close-button-card"></button>
       </div>
